--- a/languages/java/spring.org
+++ b/languages/java/spring.org
@@ -1,2 +1,3 @@
+- 2022 Learning Spring and Spring Boot https://www.kousenit.com/springboot/
 - Article: A Controller, Service and DAO Example with Spring Boot and JSF
   https://www.baeldung.com/jsf-spring-boot-controller-service-dao
