--- a/languages/js/react/react.org
+++ b/languages/js/react/react.org
@@ -7,6 +7,7 @@
   | <dialog>           | https://www.npmjs.com/package/react-modal                |
   | <details>          | https://www.npmjs.com/package/react-accessible-accordion |
   | componenents       | https://github.com/mantinedev/mantine                    |
+  | animation library  | https://github.com/pmndrs/react-spring                   |
 - Filtering undefined elements from an array in TypeScript
   https://www.benmvp.com/blog/filtering-undefined-elements-from-array-typescript/
 - https://quicktype.io/typescript/
