--- a/languages/tcl/tcl.org
+++ b/languages/tcl/tcl.org
@@ -4,6 +4,112 @@
   https://www.tcl.tk/man/tcl/TclCmd/Tcl.html
   https://wiki.tcl-lang.org/page/Dodekalogue
 - Code eggdrop's twitter https://github.com/horgh/twitter-tcl
+- MEME CHAN Comment
+  - https://wiki.tcl-lang.org/page/Tcl+Performance
+  - tclquadcode - abandonded? llvm compiler
+  - One of the simplest if not the simplest interaction with C, letting you write plugins very easily
+    - with critcl, ffidl and swig to help
+  - everything is a tagged union with on-the-fly conversion when needed
+    and a unique string representation
+  - editing dictionaries as lists or lists as strings and transparent serialization
+    #+begin_src tcl
+      puts $mydict $chan` <=> `set mydict [read $chan]
+    #+end_src
+  - debugging with *info* and *trace* https://wiki.tcl-lang.org/page/Full+program+trace+onwards
+  - Procedure arguments are passed by pointer with a copy-on-write system:
+    don't modify the argument and you don't get any memory copy.
+    To you, it just looks like regular passing by value.
+  - You cannot make circular references (?)
+  - ...more
+    #+begin_src
+ * If you use at least the builtin extensions (thread, http, tdbc, tcltest,
+ msgcat) and the very basic tcllib/tclX/tclUdp/tklib packages, you're almost
+ set for life. Personally, I also use the very convenient tclreadline, tdom,
+ pipethread and tclcurl.
+ Some more here: https://core.tcl-lang.org/jenglish/gutter/
+
+ * Channels is the cleanest I/O implementation I've ever used with some cool
+ features:
+ * Transformations allowing filters like deflate/zlib/gzip or TLS to be put on
+ a channel (see `transchan` for the API).
+ * Reflected aka virtual channels, to make a channel without an actual backing
+ FD. Basically like glibc's unportable fopencookie.
+ * Centralize all ioctl/fcntl soykaf and even more (like defining the EOF char).
+ * Integration with the event loop via `chan event` allows for a nice callback
+ oriented approach to sockets and pipes.
+ * Other third-party channel types include pty (expect), random, memory or
+ fifo (memchan).
+
+ * Builtin event loop (see `after`, `vwait`, `socket -server` and `chan event`)
+ for powerful and seamless concurrency/command scheduling.
+
+ * An elegant thread extension consisting of an interpreter per thread and no
+ raw access to other thread's memory. Comes with both simple (`thread`) and
+ performant (`tsv`) synchronization/communication facilities.
+
+ * Finally a sane, light and portable (even more with Tile) GUI toolkit: Tk.
+
+ * One of the fastest unicode aware regex implementations, written by Henry
+ Spencer himself. Has its own greater-than-POSIX-ERE syntax called ARE, not as
+ complete as PCRE (lacking lookbehind constraints, most importantly), but
+ still great for an hybrid NFA/DFA engine.
+ cf https://github.com/mariomka/regex-benchmark/pull/44.
+
+ * `uplevel` (execute a script in a different stack frame) and `tailcall`
+ (replace the current procedure with another command) let you augment the
+ language by implementing control structures and keywords yourself.
+ Inferior to CL's synergy between unhygienic macros, "naked AST" style
+ homoiconicity, symbols as first-class objects, gensym and quasi-quoting, but
+ still quite powerful.
+
+ * Safe interpreters let you do very fun things like config files in Tcl with
+ limited access to the machine and master interpreter.
+
+ * Obvious Lisp inspiration:
+ * Homoiconic through strings.
+ * Usual FP goodies like map/filter/apply.
+ * Already mentioned macros.
+ * Proper prefix arithmetic allowing for `* 4 [+ 1 2 3]` instead of
+ `expr {(1 + 2 + 3) * 4}` with sane behaviour for more than two (reduce) or
+ zero (neutral element) arguments.
+ * Multiple more-or-less powerful object systems ([incr Tcl] for C++ style OO,
+ XoTcl for CLOS inspired OO or Snit for something Tk oriented).
+ * All of that with the same advantage of CL: it does not enforce nor preach a
+ particular way of programming, unlike the ML family that comes with the
+
+       "everything is immutable" ball and chain that often gets in the way instead
+ of helping (because, big surprise, modifying data is often an essential
+ part of efficient and intuitive algorithms while recursing only makes sense
+ when manipulating recursively defined data types).
+ See https://wiki.tcl-lang.org/page/Functional+Programming for more.
+
+ * Biggest inconvenient is the near-death state of the language and community
+ (practical consequences: no LSP/SLIME equivalent, bugs accumulating, lack of
+ maintainted libraries) as well as some warts that can't be solved easily. As
+ someone who knows a bit of CL, the language itself is less powerful
+ (especially on the macro side) but the standard library is miles ahead during
+ the day to day.
+
+ Basically, a mix of CL and sh that somehow managed to end up very good and
+ getting even better with time.
+
+ I could continue all day, but you should just try it. Some more talk about it:
+ * https://wiki.tcl-lang.org/page/What+is+Tcl
+ * https://wiki.tcl-lang.org/page/Tcl+Articles
+ * https://colin-macleod.blogspot.com/2020/10/why-im-tcl-ish.html
+ * https://yosefk.com/blog/i-cant-believe-im-praising-tcl.html
+ * http://antirez.com/articoli/tclmisunderstood.html
+
+ Where to begin:
+ * man n Tcl (or `man 3tcl Tcl` on retarded distros like Debian)
+ * https://wiki.tcl-lang.org/page/TCL+for+beginners
+ * https://wiki.tcl-lang.org/page/Tcl+Tutorial+Lesson+0
+ * https://wiki.tcl-lang.org/ for everything, this is where the Tcl community lives
+ * Rosetta Code for examples/exercises
+
+ Anon's page: https://wiki.tcl-lang.org/page/q3cpma
+
+    #+end_src
 * Standard Library
 - https://core.tcl-lang.org/tcllib/doc/trunk/embedded/md/toc.md
 - https://www.tcl.tk/software/tcllib/
@@ -49,6 +155,8 @@
 | pop3d | POP3 server implementation and helper packages |
 | ftpd  | FTP server                                     |
 | smtpd | SMTP server implementation                     |
+* Libraries
+https://core.tcl-lang.org/jenglish/gutter/
 * Code: First version of redis
   https://gist.github.com/antirez/6ca04dd191bdb82aad9fb241013e88a8
 #+begin_src tcl
